--- a/app/src/main/res/layout/activity_decision.xml
+++ b/app/src/main/res/layout/activity_decision.xml
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@id/decision_personal_number_container"
         android:layout_marginTop="16dp"
         android:hint="@string/hint_amount"
-        app:helperText="@string/helper_amount"
+        tools:helperText="2000—10 000 EUR"
         >
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -76,7 +76,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
         android:hint="@string/hint_period"
-        app:helperText="@string/helper_period"
+        tools:helperText="12—60 months"
         >
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
