--- a/app/src/main/res/layout/activity_claim.xml
+++ b/app/src/main/res/layout/activity_claim.xml
@@ -33,13 +33,14 @@
 
     <!-- Amount -->
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/claim_amount_container"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/claim_amount_units"
         app:layout_constraintTop_toBottomOf="@id/claim_personal_number_container"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:hint="@string/hint_amount"
         tools:helperText="2000—10 000 EUR"
         >
